--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -846,7 +846,7 @@
       <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="postEditOffcanvas" aria-labelledby="offcanvasWithBothOptionsLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title font-monospace m-2" id="offcanvasWithBothOptionsLabel">Edit Post</h5>
-          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" onclick="removePreviewForPostUpdate()" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
            
@@ -920,6 +920,8 @@
                                         </select>
                                     </div>
                                 </div>
+
+                                <div id="previewContainerForEventPhoto"></div>
                                 
                                     <button id="eventCreateBtn" style="margin-left: 200px; border-radius: 10px;" type="button" class="btn btn-primary" onclick="createEventPost()" data-bs-dismiss="offcanvas"  aria-label="Close" >POST</button>
                                 
@@ -1000,6 +1002,7 @@
                                 </select>
                             </div>
                         </div>  
+                        <div id="previewContainerForPollPhoto"></div>
                             <button type="button" style="margin-left: 200px; border-radius: 10px;" class="btn btn-primary" id="pollCreateBtn"  onclick="createAPollPost()"  data-bs-dismiss="offcanvas"  aria-label="Close"  >POST</button>
                     </form> 
         </div>
