--- a/src/main/resources/static/assets/css/loading.css
+++ b/src/main/resources/static/assets/css/loading.css
@@ -1039,16 +1039,22 @@ code {
 
 
 .super-container {
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     overflow: hidden;
     border-radius: 15px;
     margin: 3px;
   }
   
-  .super-image {
+  .super-image-video {
     width: 100%;
     height: 100%;
     object-fit: cover; /* Maintain aspect ratio and fill container */
   }
   
+
+  .super-edit-style{
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 0 4px 0px rgba(0, 0, 0, 0.5);
+  }
