--- a/src/main/resources/templates/layout/group-post.html
+++ b/src/main/resources/templates/layout/group-post.html
@@ -305,6 +305,7 @@
                                                 </select>
                                             </div>
                                         </div>
+                                        <div id="previewContainerForEventPhoto"></div>
                                         
                                             <button id="eventCreateBtn" style="margin-left: 200px; border-radius: 10px;" type="button" class="btn btn-primary" onclick="createEventPost()" data-bs-dismiss="offcanvas"  aria-label="Close" >POST</button>
                                         
@@ -359,6 +360,7 @@
                                 </select>
                             </div>
                         </div>  
+                        <div id="previewContainerForPollPhoto"></div>
                             <button type="button" style="margin-left: 200px; border-radius: 10px;" class="btn btn-primary" id="pollCreateBtn"  onclick="createAPollPost()"  data-bs-dismiss="offcanvas"  aria-label="Close"  >POST</button>
                     </form> 
         </div>
@@ -416,17 +418,25 @@
         <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="postEditOffcanvas" aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title font-monospace m-2" id="offcanvasWithBothOptionsLabel">Edit Post</h5>
-              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" onclick="removePreviewForPostUpdate()" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
                
                        <div class="modal-body" id="editModal">
-                           ...
+                           
+    
+                        <div id="update-raw-old"></div>
+    
+                        <div id="update-raw-preview"></div>
+    
                        </div>  
-                           <button type="button" onclick="getUpdateData()"   class="btn btn-primary"
+                           <button id="resourceUpdateButton" type="button" onclick="getUpdateData()"    class="btn btn-primary"
                            data-bs-dismiss="offcanvas"  aria-label="Close"  >Update
                            </button>
      
+                           <button id="rawUpdateButton" type="button" onclick="getUpdateDataForRaw()"    class="btn btn-primary"
+                           data-bs-dismiss="offcanvas"  aria-label="Close"  >Update
+                           </button>
                     
                </div>
            </div>
