--- a/src/main/resources/templates/user/user-group.html
+++ b/src/main/resources/templates/user/user-group.html
@@ -17,59 +17,6 @@
         </button>
 
         <!-- Create Community Modal -->
-        <div class="modal fade" id="createCommunityModal" tabindex="-1" aria-labelledby="createCommunityModalLabel"
-             aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header" style="background-color: #007bff">
-                        <h5 class="modal-title" id="createCommunityModalLabel" style="color:white;">Create
-                            Community</h5>
-                    </div>
-                    <div class="modal-body">
-                        <form id="createCommunityForm">
-                            <div class="form-group">
-                                <label for="name">Name:</label>
-                                <input type="text" class="form-control" id="name" name="name">
-                                <span id="nameError" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label for="ownerId">Choose Owner Name:</label>
-                                <select class="form-control" id="ownerId" name="ownerId">
-                                    <option value="">Select Owner</option>
-                                    <option th:each="user : ${users}" th:value="${user.id}"
-                                            th:text="${user.name}"></option>
-                                </select>
-                                <span id="ownerIdError" class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label for="description">Description:</label>
-                                <input type="text" class="form-control" id="description" name="description">
-                                <span id="descriptionError" class="text-danger"></span>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="description">Access:<i class="fa-solid fa-lock"></i></label>
-                                <select name="groupAccess" id="groupAccessForCommunity" class="form-select">
-                                    <option value="PUBLIC" selected>PUBLIC</option>
-                                    <option value="PRIVATE">PRIVATE</option>
-                                </select>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="file">Image:</label>
-                                <input type="file" class="form-control" accept="image/**" id="file" name="file"
-                                       multiple="multiple"/>
-                                <span id="fileError" class="text-danger"></span>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" id="createCommunityBtn">Create</button>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <div class="container">
         <link rel="stylesheet" href="/assets/css/group-card.css">
@@ -360,6 +307,61 @@
     </div>
 </div>
 
+<div class="modal fade" id="createCommunityModal" tabindex="-1" aria-labelledby="createCommunityModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: #007bff">
+                <h5 class="modal-title" id="createCommunityModalLabel" style="color:white;">Create
+                    Community</h5>
+            </div>
+            <div class="modal-body">
+                <form id="createCommunityForm">
+                    <div class="form-group">
+                        <label for="name">Name:</label>
+                        <input type="text" class="form-control" id="name" name="name">
+                        <span id="nameError" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="ownerId">Choose Owner Name:</label>
+                        <select class="form-control" id="ownerId" name="ownerId">
+                            <option value="">Select Owner</option>
+                            <option th:each="user : ${users}" th:value="${user.id}"
+                                    th:text="${user.name}"></option>
+                        </select>
+                        <span id="ownerIdError" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description:</label>
+                        <input type="text" class="form-control" id="description" name="description">
+                        <span id="descriptionError" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="description">Access:<i class="fa-solid fa-lock"></i></label>
+                        <select name="groupAccess" id="groupAccessForCommunity" class="form-select">
+                            <option value="PUBLIC" selected>PUBLIC</option>
+                            <option value="PRIVATE">PRIVATE</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="file">Image:</label>
+                        <input type="file" class="form-control" accept="image/**" id="file" name="file"
+                               multiple="multiple"/>
+                        <span id="fileError" class="text-danger"></span>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" id="createCommunityBtn">Create</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <!-- Modal -->
 <div class="modal fade" id="staticBackdropForAddOwner" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
      aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -386,19 +388,15 @@
         </div>
     </div>
 </div>
-<!--<div th:replace="~{index::footer}"></div>-->
 <div th:replace="~{index::footer}"></div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>-->
+<!--<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
 <script src="https://kit.fontawesome.com/e2397b357b.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -442,7 +440,6 @@
         if (!isValid) {
             e.preventDefault();
         } else {
-            $('#createCommunityModal').modal('hide');
             await insertGroup();
         }
 
@@ -483,9 +480,8 @@
 
             document.body.appendChild(styledAlert);
 
-
+            $('#createCommunityModal').modal('hide');
             styledAlert.style.display = 'block';
-
             setTimeout(function () {
                 styledAlert.style.display = 'none';
             }, 3000);
@@ -1218,8 +1214,6 @@
 
         usersList.innerHTML = '';
         communityUsers.forEach(user => {
-            if (currentUser.role === "ADMIN") {
-
                 const userDiv = document.createElement('div');
                 userDiv.id = "container";
                 userDiv.style.padding = '20px';
@@ -1276,67 +1270,6 @@
                 userDiv.appendChild(label);
 
                 usersList.appendChild(userDiv);
-
-            } else if (user.name !== community.ownerName) {
-
-                const userDiv = document.createElement('div');
-                userDiv.id = "container";
-                userDiv.style.padding = '20px';
-                userDiv.style.borderRadius = '10px';
-                userDiv.style.marginLeft = "280px";
-
-                const nestedDiv = document.createElement('div');
-                nestedDiv.id = "container1";
-                nestedDiv.style.marginBottom = "80px";
-
-                const photoSpan = document.createElement('span');
-                const nameSpan = document.createElement('span');
-                const deptSpan = document.createElement('span');
-                nameSpan.textContent = user.name;
-                const br = document.createElement('br');
-                deptSpan.textContent = `(${user.dept})`;
-
-                if (user.photo) {
-                    const photoImg = document.createElement('img');
-                    photoImg.src = user.photo;
-                    photoImg.alt = "User's Photo";
-                    photoSpan.appendChild(photoImg);
-                } else {
-                    const userPhoto = document.createElement('img');
-                    userPhoto.src = '/assets/img/default-logo.png';
-                    userPhoto.alt = "User's Photo";
-                    photoSpan.appendChild(userPhoto);
-                }
-
-                const checkbox = document.createElement('input');
-                checkbox.type = "checkbox";
-                checkbox.id = `_kickcheckbox${user.id}`;
-                checkbox.name = "userIds";
-                checkbox.value = user.id;
-
-                checkbox.addEventListener('change', () => {
-                    console.log('checkbox is checked---->')
-                })
-
-                const label = document.createElement('label');
-                label.htmlFor = `_kickcheckbox${user.id}`;
-                label.className = "form-check-label";
-                label.style.marginLeft = "390px";
-
-                const tickMarkDiv = document.createElement('div');
-                tickMarkDiv.className = "tick_mark";
-
-                nestedDiv.appendChild(photoSpan);
-                nestedDiv.appendChild(nameSpan);
-                nestedDiv.appendChild(br);
-                nestedDiv.appendChild(deptSpan);
-                label.appendChild(tickMarkDiv);
-                userDiv.appendChild(nestedDiv);
-                userDiv.appendChild(checkbox);
-                userDiv.appendChild(label);
-
-                usersList.appendChild(userDiv);
-            }
         });
 
         $('#kickModal').modal('show');
