--- a/src/main/resources/templates/user/user-chat.html
+++ b/src/main/resources/templates/user/user-chat.html
@@ -176,7 +176,7 @@
                     </div>
                     <div class="button-group">
                         <button id="restartBtn" class="btn btn-secondary">Restart</button>
-                        <button id="saveBtn" class="btn btn-primary">Save</button>
+                        <button id="saveBtn" class="btn btn-primary" data-bs-dismiss="modal">Save</button>
                     </div>
                 </div>
             </div>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="member-kick-icon">Kick</button>
+                    <button type="button" class="btn btn-primary" id="member-kick-icon" data-bs-dismiss="modal">Kick</button>
                 </div>
             </div>
         </form>
