--- a/src/main/resources/templates/user/user-chat.html
+++ b/src/main/resources/templates/user/user-chat.html
@@ -230,6 +230,7 @@
         </form>
     </div>
 </div>
+<div th:replace="~{index::footer}"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -239,7 +240,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-<!-- <div th:replace="~{index::footer}"></div> -->
+
 <script>
     let $j = jQuery.noConflict();
     $j(document).ready(function () {
