almost all add5

--- a/src/main/resources/static/assets/css/chatRoom.css
+++ b/src/main/resources/static/assets/css/chatRoom.css
@@ -32,6 +32,10 @@
     overflow-y: auto; /* Scrollable users list */
 }
 
+.users-list-container::-webkit-scrollbar {
+ display: none;
+}
+
 .users-list h2 {
     font-size: 1.5rem;
     margin-bottom: 10px;
