--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -1296,6 +1296,202 @@
         });
         return html;
     }
+    //for invitation start
+
+    async function showInvitation(){
+        const showCount = document.getElementById('inviteMessageCount');
+        const size = await getInvitation();
+        console.log('adfdfdfdfdf',size)
+        if(size === 0){
+            showCount.innerText = ''
+        }else{
+            showCount.innerText = size;
+        }
+    }
+
+    document.addEventListener('DOMContentLoaded',async function () {
+        await showInvitation();
+        await showEmptyContent();
+        await getInvitation();
+        await getAllInvitations();
+    });
+
+    async function getInvitation(){
+        const msgCount = await fetch('/user/invited-user-count');
+        const msgSize = await msgCount.json();
+        return msgSize;
+    }
+
+    async function getInvitedUserById(id){
+        const data = await fetch(`/user/get-invited-user/${id}`);
+        const res = await data.json();
+        return res;
+    }
+
+    async function showEmptyContent(){
+        const invitations = await fetchInvitationMessage();
+        const root = document.getElementById('messageRoot');
+        if(invitations.length === 0){
+            root.style.fontSize = '30px';
+            root.innerHTML = 'There is no invitations yet...';
+        }
+    }
+
+
+    async function getAllInvitations(){
+        const invitation = await fetchInvitationMessage();
+        for (const i of invitation) {
+            await displayMessageForInvitation(i.id,i.community.image,i.community.name,i.community.id,i.senderId);
+        }
+    }
+
+    async function displayMessageForInvitation(id,image,name,communityId,userId){
+        const root = document.getElementById('messageRoot');
+        const divElement = document.createElement('div');
+        divElement.classList.add(`invitation-message-${id}`)
+        divElement.style.padding = '15px';
+        divElement.style.border = '1px solid black';
+        divElement.style.borderRadius = '10px';
+        divElement.style.margin = '3px';
+        divElement.style.marginLeft = '55px';
+        divElement.style.marginTop = '-35px';
+        divElement.style.borderBottomLeftRadius = '40px';
+        divElement.style.backgroundColor = 'lightgrey';
+        const invitedUser = await getInvitedUserById(userId);
+        const spElementForImage = document.createElement('span');
+        spElementForImage.classList.add(`span-image-${id}`);
+        const imgTag = document.createElement('img');
+        const photo = `${image}`|| `/static/assets/img/default-logo.png`;
+        imgTag.src = photo;
+        imgTag.style.width = '50px';
+        imgTag.style.height = '50px';
+        imgTag.style.borderRadius = '50%';
+        spElementForImage.appendChild(imgTag);
+        const spElementForContent = document.createElement('span');
+        spElementForContent.innerHTML = `${invitedUser.name} (${invitedUser.dept}) invited you to join ${name} group`;
+        const buttonsWrapper = document.createElement('div');
+        buttonsWrapper.classList.add(`button-wrapper-${id}`)
+        buttonsWrapper.style.marginLeft = '220px';
+        const acceptButton = document.createElement('button');
+        acceptButton.innerHTML = 'Accept'
+        acceptButton.classList.add('btn','btn-outline-success')
+        acceptButton.id = id;
+        acceptButton.addEventListener('click',async () => {
+            await acceptInvitation(id,communityId,name);
+        });
+        const denyButton = document.createElement('button');
+        denyButton.innerHTML = 'Reject';
+        denyButton.classList.add('btn','btn-outline-danger')
+        denyButton.addEventListener('click', async () => {
+            await rejectInvitation(id);
+        });
+        buttonsWrapper.appendChild(acceptButton);
+        buttonsWrapper.appendChild(denyButton);
+        divElement.appendChild(spElementForContent);
+        // divElement.appendChild(buttonsWrapper);
+        const allWrapDiv = document.createElement('div');
+        allWrapDiv.classList.add(`all-wrap-div-${id}`);
+        allWrapDiv.appendChild(spElementForImage)
+        allWrapDiv.appendChild(divElement);
+        allWrapDiv.appendChild(buttonsWrapper);
+        root.appendChild(allWrapDiv);
+    }
+
+
+    async function acceptInvitation(id,communityId,name){
+        const data = await fetch(`/user/accept-invitation/${id}/${communityId}`);
+        const response = await data.json();
+        if(response){
+            const divEl = document.querySelector(`.all-wrap-div-${id}`);
+            if(divEl){
+                await showInvitation();
+                divEl.remove();
+            }
+            let alertMessage = response.message + ` ${name}`;
+            let alertStyle = `
+            background-color: white;
+            color: blue;
+            border: 1px solid #cc0000;
+            border-radius: 15px;
+        `;
+            let styledAlert = document.createElement('div');
+            styledAlert.style.cssText = `
+            ${alertStyle}
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 10000;
+            display: none;
+        `;
+            styledAlert.innerHTML = alertMessage;
+
+
+            document.body.appendChild(styledAlert);
+
+
+            styledAlert.style.display = 'block';
+
+            setTimeout(function() {
+                styledAlert.style.display = 'none';
+            }, 5000);
+        }
+    }
+
+
+    async function rejectInvitation(id){
+        const data = await fetch(`/user/reject-invitation/${id}`);
+        const response = await data.json();
+        if(response){
+            const divEl = document.querySelector(`.all-wrap-div-${id}`);
+            if(divEl){
+                await showInvitation();
+                divEl.remove();
+
+            }
+            let alertMessage = response.message;
+            let alertStyle = `
+            background-color: #ffcccc;
+            color: #cc0000;
+            border: 1px solid #cc0000;
+             border-radius: 15px;
+        `;
+            let styledAlert = document.createElement('div');
+            styledAlert.style.cssText = `
+            ${alertStyle}
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            z-index: 10000;
+            display: none;
+        `;
+            styledAlert.innerHTML = alertMessage;
+
+
+            document.body.appendChild(styledAlert);
+
+
+            styledAlert.style.display = 'block';
+
+            setTimeout(function() {
+                styledAlert.style.display = 'none';
+            }, 3000);
+        }
+    }
+
+    async function fetchInvitationMessage(){
+        const data = await fetch('/user/invited-user-display');
+        const response = await data.json();
+        return response;
+    }
+
+    //for invitation end
+
 </script>
 <script src="/static/assets/js/profile.js"></script>
 <div th:replace="~{index::footer}"></div>
